--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <style>
 header {
   display: none;
@@ -6,29 +7,39 @@ header {
 <style>
 body {background-color:white;color:black}
 </style>
+<body>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
+<div markdown=1>
+  
 ## Notice
+  
+</div>
 Before doing anything, read these:
 
+<div markdown=1>
 [License](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE)<br>
 [Terms of Service](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service)
 
+  
 ### Thank you for reading.
 
 
 ## Why is the bot down?
 
+  
 We use a hosting service called [Railway](https://railway.app) to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
 Consider donating to our project.
 
 
 ## Join our Discord!
+</div>
 
 <script src="https://shhh7612.github.io/plugins/widget.js"></script>
 <discord-widget id="1007844136738619545" width="700px" height="400px" footerText="Azumi Development" color="#5865f2" backgroundColor="#0c0c0d" textColor="#ffffff" statusColor="#858585"></discord-widget>
 
+<div markdown=1>
 ## Some reviews...
-
+</div>
 <img width="257" src="https://user-images.githubusercontent.com/101112829/210307372-a03da8fb-71d7-43b5-b622-48b6175882ff.png"><br>
 <img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/210310128-c47827ce-439e-4979-8020-ff78f1f64bd4.png"><br>
 <img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/211178655-251f5d33-e561-4279-88e7-3ab7b6636e1b.png"><br>
@@ -38,3 +49,5 @@ Consider donating to our project.
 
 
 © Azumi Development 2022-2023
+</body>
+</html>
