--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@ body {background-color:white;color:black}
 </style>
 <body>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
-<div markdown=1>
+<div markdown="1">
   
 ## Notice
   
 </div>
 Before doing anything, read these:
 
-<div markdown=1>
+<div markdown="1">
 [License](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE)<br>
 [Terms of Service](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service)
 
@@ -37,7 +37,7 @@ Consider donating to our project.
 <script src="https://shhh7612.github.io/plugins/widget.js"></script>
 <discord-widget id="1007844136738619545" width="700px" height="400px" footerText="Azumi Development" color="#5865f2" backgroundColor="#0c0c0d" textColor="#ffffff" statusColor="#858585"></discord-widget>
 
-<div markdown=1>
+<div markdown="1">
 ## Some reviews...
 </div>
 <img width="257" src="https://user-images.githubusercontent.com/101112829/210307372-a03da8fb-71d7-43b5-b622-48b6175882ff.png"><br>
