--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ header {
 <style>
 body {background-color:white;color:black}
 </style>
+<style>
+md-block {white-space: pre; font-family: monospace;}
+</style>
 <head>
 <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </head>
