--- a/index.html
+++ b/index.html
@@ -15,36 +15,36 @@ md-block {white-space: pre; font-family: monospace;}
 </head>
 <body>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
-<md-block>
-## Notice
+
+<md-span>## Notice</md-span>
   
-</md-block>
+
 Before doing anything, read these:
 
-<md-block>
-[License](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE)<br>
-[Terms of Service](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service)
+
+<md-span>[License](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE)</md-span><br>
+<md-span>[Terms of Service](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service)</md-span>
 
   
-### Thank you for reading.
+<md-span>### Thank you for reading.</md-span>
 
 
-## Why is the bot down?
+<md-span>## Why is the bot down?</md-span>
 
   
-We use a hosting service called [Railway](https://railway.app) to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
+We use a hosting service called <md-span>[Railway](https://railway.app)</md-span> to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
 Consider donating to our project.
 
 
-## Join our Discord!
-</md-block>
+<md-span>## Join our Discord!</md-span>
+
 
 <script src="https://shhh7612.github.io/plugins/widget.js"></script>
 <discord-widget id="1007844136738619545" width="700px" height="400px" footerText="Azumi Development" color="#5865f2" backgroundColor="#0c0c0d" textColor="#ffffff" statusColor="#858585"></discord-widget>
 
-<md-block>
-## Some reviews...
-</md-block>
+
+<md-span>## Some reviews...</md-span>
+
 <img width="257" src="https://user-images.githubusercontent.com/101112829/210307372-a03da8fb-71d7-43b5-b622-48b6175882ff.png"><br>
 <img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/210310128-c47827ce-439e-4979-8020-ff78f1f64bd4.png"><br>
 <img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/211178655-251f5d33-e561-4279-88e7-3ab7b6636e1b.png"><br>
