--- a/index.html
+++ b/index.html
@@ -13,38 +13,37 @@ md-block {white-space: pre; font-family: monospace;}
 <head>
 <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </head>
-<body>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
 
-<md-span>## Notice</md-span>
+<body><md-block>## Notice</md-block></body>
   
 
 Before doing anything, read these:
 
 
-<md-span>[License](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE)</md-span><br>
-<md-span>[Terms of Service](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service)</md-span>
+<body><md-block>[License](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE)</md-block></body><br>
+<body><md-block>[Terms of Service](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service)</md-block></body>
+
+<body>
+<md-block>### Thank you for reading.</md-block>
+</body>
+
+<body><md-block>## Why is the bot down?</md-block></body>
 
   
-<md-span>### Thank you for reading.</md-span>
-
-
-<md-span>## Why is the bot down?</md-span>
-
-  
-We use a hosting service called <md-span>[Railway](https://railway.app)</md-span> to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
+We use a hosting service called <body><md-block>[Railway](https://railway.app)</md-block></body> to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
 Consider donating to our project.
 
-
-<md-span>## Join our Discord!</md-span>
-
+<body>
+<md-block>## Join our Discord!</md-block>
+</body>
 
 <script src="https://shhh7612.github.io/plugins/widget.js"></script>
 <discord-widget id="1007844136738619545" width="700px" height="400px" footerText="Azumi Development" color="#5865f2" backgroundColor="#0c0c0d" textColor="#ffffff" statusColor="#858585"></discord-widget>
 
-
-<md-span>## Some reviews...</md-span>
-
+<body>
+<md-block>## Some reviews...</md-block>
+</body>
 <img width="257" src="https://user-images.githubusercontent.com/101112829/210307372-a03da8fb-71d7-43b5-b622-48b6175882ff.png"><br>
 <img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/210310128-c47827ce-439e-4979-8020-ff78f1f64bd4.png"><br>
 <img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/211178655-251f5d33-e561-4279-88e7-3ab7b6636e1b.png"><br>
@@ -54,5 +53,4 @@ Consider donating to our project.
 
 
 © Azumi Development 2022-2023
-</body>
 </html>
