--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {background-color:white;color:black}
 Before doing anything, read these:
 
 
-<body><md-block>[License](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE)</md-block></body><br>
+<body><md-block>[License](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE)</md-block></body><br/>
 <body><md-block>[Terms of Service](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service)</md-block></body>
 
 <body>
@@ -28,7 +28,7 @@ Before doing anything, read these:
 <body><md-block>## Why is the bot down?</md-block></body>
 
   
-We use a hosting service called <body><md-block>[Railway](https://railway.app)</md-block></body> to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
+We use a hosting service called <body><md-span>[Railway](https://railway.app)</md-span></body> to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
 Consider donating to our project.
 
 <body>
@@ -41,11 +41,11 @@ Consider donating to our project.
 <body>
 <md-block>## Some reviews...</md-block>
 </body>
-<img width="257" src="https://user-images.githubusercontent.com/101112829/210307372-a03da8fb-71d7-43b5-b622-48b6175882ff.png"><br>
-<img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/210310128-c47827ce-439e-4979-8020-ff78f1f64bd4.png"><br>
-<img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/211178655-251f5d33-e561-4279-88e7-3ab7b6636e1b.png"><br>
-<br>
-<br>
+<img width="257" src="https://user-images.githubusercontent.com/101112829/210307372-a03da8fb-71d7-43b5-b622-48b6175882ff.png"><br/>
+<img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/210310128-c47827ce-439e-4979-8020-ff78f1f64bd4.png"><br/>
+<img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/211178655-251f5d33-e561-4279-88e7-3ab7b6636e1b.png"><br/>
+<br/>
+<br/>
 
 
 
