--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ md-span {white-space: pre; font-family: sans-serif;}
 <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </head>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
-
+<center>
 <body><md-block>## Notice</md-block></body>
   
 
@@ -56,4 +56,5 @@ Consider donating to our project.
 
 
 © Azumi Development 2022-2023
+</center>
 </html>
