--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@ header {
 body {background-color:white;color:black}
 </style>
 <style>
-md-block {white-space: pre; font-family: sans-serif;}
+md-block {font-family: sans-serif;}
 </style>
 <style>
-md-span {white-space: pre; font-family: sans-serif;}
+md-span {font-family: sans-serif;}
 </style>
 <head>
 <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </head>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
-<center>
 <body><md-block>## Notice</md-block></body>
   
 
@@ -56,5 +55,4 @@ Consider donating to our project.
 
 
 © Azumi Development 2022-2023
-</center>
 </html>
