--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ md-block {font-family: sans-serif;}
 <style>
 md-span {font-family: sans-serif;}
 </style>
+<style>
+html {font-family: sans-serif;}
+</style>
 <head>
 <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </head>
