--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ header {
 }
 </style>
 <style>
-body {background-color:white;color:black}
+body {background-color:black;color:white}
 </style>
 <style>
 md-block {font-family: sans-serif;}
