First CLI Commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ header {
 }
 </style>
 <style>
-body {background-color:black;color:white}
+body {background-color:rgb(18, 18, 18);color:white}
 </style>
 <style>
 md-block {font-family: sans-serif;}
@@ -19,6 +19,9 @@ html {font-family: sans-serif;}
 <head>
 <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </head>
+<header>
+This website is under development!
+</header>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
 <body><md-block>## Notice</md-block></body>
   
