--- a/index.html
+++ b/index.html
@@ -8,51 +8,39 @@ header {
 body {background-color:rgb(18, 18, 18);color:white}
 </style>
 <style>
-md-block {font-family: sans-serif;}
-</style>
-<style>
-md-span {font-family: sans-serif;}
-</style>
-<style>
 html {font-family: sans-serif;}
 </style>
-<head>
-<script type="module" src="https://md-block.verou.me/md-block.js"></script>
-</head>
-<header>
-This website is under development!
-</header>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
-<body><md-block>## Notice</md-block></body>
+<h2>Notice</h2>
   
 
 Before doing anything, read these:
 
 
-<body><md-block>[License](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE)</md-block></body><br/>
-<body><md-block>[Terms of Service](https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service)</md-block></body>
+<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE">License</a>
+<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service">Terms of Service</a>
 
 
-<body>
-<md-block>### Thank you for reading.</md-block>
-</body>
 
-<body><md-block>## Why is the bot down?</md-block></body>
+<h3>Thank you for reading.</h3>
+
+
+<h2>Why is the bot down?</h2>
 
   
 We use a hosting service called <body><md-span>[Railway](https://railway.app)</md-span></body> to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
 Consider donating to our project.
 
-<body>
-<md-block>## Join our Discord!</md-block>
-</body>
+
+<h2>Join our Discord!</h2>
+
 
 <script src="https://shhh7612.github.io/plugins/widget.js"></script>
 <discord-widget id="1007844136738619545" width="700px" height="400px" footerText="Azumi Development" color="#5865f2" backgroundColor="#0c0c0d" textColor="#ffffff" statusColor="#858585"></discord-widget>
 
-<body>
-<md-block>## Some reviews...</md-block>
-</body>
+
+<h2>Some reviews...</h2>
+
 <img width="257" src="https://user-images.githubusercontent.com/101112829/210307372-a03da8fb-71d7-43b5-b622-48b6175882ff.png"><br/>
 <img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/210310128-c47827ce-439e-4979-8020-ff78f1f64bd4.png"><br/>
 <img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/211178655-251f5d33-e561-4279-88e7-3ab7b6636e1b.png"><br/>
