--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html>/
 <style>
 header {
   display: none;
@@ -8,8 +8,23 @@ header {
 body {background-color:rgb(18, 18, 18);color:white}
 </style>
 <style>
+button {
+border: none;
+color: rgb(88, 101, 242);
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;
+cursor: pointer;
+}
+<style>
 html {font-family: sans-serif;}
 </style>
+<head>
+<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
+</head>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
 <h2>Notice</h2>
   
@@ -19,6 +34,7 @@ Before doing anything, read these:
 
 <a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE">License</a>
 <a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service">Terms of Service</a>
+<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/privacy-policy">Privacy Policy</a>
 
 
 
@@ -38,7 +54,10 @@ Consider donating to our project.
 <script src="https://shhh7612.github.io/plugins/widget.js"></script>
 <discord-widget id="1007844136738619545" width="700px" height="400px" footerText="Azumi Development" color="#5865f2" backgroundColor="#0c0c0d" textColor="#ffffff" statusColor="#858585"></discord-widget>
 
+<h2>Add the bot to your servers!</h2>
+<button type="button" onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=1005312021836869795&permissions=1636248845399&scope=bot'">Add to Server</button>
 
+  
 <h2>Some reviews...</h2>
 
 <img width="257" src="https://user-images.githubusercontent.com/101112829/210307372-a03da8fb-71d7-43b5-b622-48b6175882ff.png"><br/>
