--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>/
+<html>
 <style>
 header {
   display: none;
@@ -19,9 +19,6 @@ font-size: 16px;
 margin: 4px 2px;
 cursor: pointer;
 }
-<style>
-html {font-family: sans-serif;}
-</style>
 <head>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
 </head>
@@ -44,7 +41,8 @@ Before doing anything, read these:
 <h2>Why is the bot down?</h2>
 
   
-We use a hosting service called <body><md-span>[Railway](https://railway.app)</md-span></body> to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
+We use a hosting service called <a href="https://railway.app">Railway</a>
+to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
 Consider donating to our project.
 
 
