--- a/index.html
+++ b/index.html
@@ -29,42 +29,43 @@ cursor: pointer;
 Before doing anything, read these:
 
 
-<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE">License</a>
-<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service">Terms of Service</a>
-<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/privacy-policy">Privacy Policy</a>
-
-
-
+<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE">License</a><br/>
+<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service">Terms of Service</a><br/>
+<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/privacy-policy">Privacy Policy</a><br/>
+<br/>
 <h3>Thank you for reading.</h3>
-
-
+<br/>
+<br/>
 <h2>Why is the bot down?</h2>
-
-  
+<br/>
+<br/>
 We use a hosting service called <a href="https://railway.app">Railway</a>
 to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
 Consider donating to our project.
-
-
+<br/>
+<br/>
+<br/>
 <h2>Join our Discord!</h2>
-
-
+<br/>
+<br/>
 <script src="https://shhh7612.github.io/plugins/widget.js"></script>
 <discord-widget id="1007844136738619545" width="700px" height="400px" footerText="Azumi Development" color="#5865f2" backgroundColor="#0c0c0d" textColor="#ffffff" statusColor="#858585"></discord-widget>
-
+<br/>
+<br/>
 <h2>Add the bot to your servers!</h2>
 <button type="button" onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=1005312021836869795&permissions=1636248845399&scope=bot'">Add to Server</button>
-
-  
+<br/>
+<br/>
 <h2>Some reviews...</h2>
-
+<br/>
+<br/>
 <img width="257" src="https://user-images.githubusercontent.com/101112829/210307372-a03da8fb-71d7-43b5-b622-48b6175882ff.png"><br/>
 <img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/210310128-c47827ce-439e-4979-8020-ff78f1f64bd4.png"><br/>
 <img width="257" alt="image" src="https://user-images.githubusercontent.com/101112829/211178655-251f5d33-e561-4279-88e7-3ab7b6636e1b.png"><br/>
 <br/>
 <br/>
-
-
+<br/>
+<br/>
 
 
 
