--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ font-size: 16px;
 margin: 4px 2px;
 cursor: pointer;
 }
+</style>
 <head>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
 </head>
