--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@ body {background-color:rgb(18, 18, 18);color:white}
 </style>
 <style>
 button {
-border: none;
-color: rgb(88, 101, 242);
+border: 1px solid black;
+border-radius: 10px;
+background-color: rgb(88, 101, 242);
+color: white;
 padding: 15px 32px;
 text-align: center;
 text-decoration: none;
@@ -30,7 +32,7 @@ cursor: pointer;
 Before doing anything, read these:
 
 
-<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE">License</a><br/>
+<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE">License</a><br/><br/>
 <a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service">Terms of Service</a><br/>
 <a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/privacy-policy">Privacy Policy</a><br/>
 <br/>
