--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@ cursor: pointer;
 <h2>Notice</h2>
   
 
-Before doing anything, read these:
+Before doing anything, read these:<br/>
+<br/>
 
-
-<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE">License</a><br/><br/>
+<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/LICENSE">License</a><br/>
 <a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service">Terms of Service</a><br/>
 <a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/privacy-policy">Privacy Policy</a><br/>
 <br/>
