--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ margin: 4px 2px;
 cursor: pointer;
 }
 </style>
+<style>
+html {font: tahoma, font-family: sans-serif}
+</style>
 <head>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
 </head>
