--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ cursor: pointer;
 }
 </style>
 <style>
-html {font: tahoma, font-family: sans-serif}
+html {font-family: Arial}
 </style>
 <head>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
