--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@ cursor: pointer;
 <style>
 html {font-family: Arial}
 </style>
+<style>
+a href {
+  color: white;
+}
+</style>
 <head>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
 </head>
