--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ header {
 }
 </style>
 <style>
-body {background-color:rgb(18, 18, 18);color:white}
+body {background-color:white;color:black}
 </style>
 <style>
 button {
@@ -24,11 +24,6 @@ cursor: pointer;
 </style>
 <style>
 html {font-family: Arial}
-</style>
-<style>
-a {
-  color: white;
-}
 </style>
 <head>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
