--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@ header {
 }
 </style>
 <style>
-body {background-color:white;color:black}
+body {background-color:rgb(18,18,18);color:white}
+</style>
+<style>
+a {
+color:blue;
+}
 </style>
 <style>
 button {
