--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ cursor: pointer;
 html {font-family: Arial}
 </style>
 <head>
+<title>Azumi Development</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
 </head>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
