--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body {background-color:rgb(18,18,18);color:white}
 </style>
 <style>
 a {
-color:blue;
+color:rgb(255, 204, 0);
 }
 </style>
 <style>
