--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@ header {
 }
 </style>
 <style>
-body {background-color:rgb(18,18,18);color:white}
+body {background-color:rgb(1, 2, 3);color:white}
 </style>
 <style>
-a {
+a:link {
 color:rgb(255, 204, 0);
+}
+a:visited {
+color:rgb(204, 112, 0);
+}
+a:hover {
+color:rgb(255, 204, 0);
+}
+a:active {
+color:rgb(204, 112, 0);
 }
 </style>
 <style>
