--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@ body {background-color:rgb(1, 2, 3);color:white}
 <style>
 a:link {
 color:rgb(255, 204, 0);
+text-decoration: none;
 }
 a:visited {
 color:rgb(204, 112, 0);
+text-decoration: none;
 }
 a:hover {
 color:rgb(255, 204, 0);
