--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
 </head>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
+<center>
 <h2>Notice</h2>
-  
 
 Before doing anything, read these:<br/>
 <br/>
@@ -51,4 +51,5 @@ Consider donating to our project.
 
 
 © Azumi Development 2022-2023
+</center>
 </html>
