--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Before doing anything, read these:<br/>
 <br/>
 <br/>
 <h2>Why is the bot down?</h2>
+</center>
 <br/>
 <br/>
 We use a hosting service called <a href="https://railway.app">Railway</a>
@@ -26,18 +27,24 @@ Consider donating to our project.
 <br/>
 <br/>
 <br/>
+<center>
 <h2>Join our Discord!</h2>
+</center>
 <br/>
 <br/>
 <script src="https://shhh7612.github.io/plugins/widget.js"></script>
 <discord-widget id="1007844136738619545" width="700px" height="400px" footerText="Azumi Development" color="#5865f2" backgroundColor="#0c0c0d" textColor="#ffffff" statusColor="#858585"></discord-widget>
 <br/>
 <br/>
+<center>
 <h2>Add the bot to your servers!</h2>
 <button type="button" onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=1005312021836869795&permissions=1636248845399&scope=bot'">Add to Server</button>
 <br/>
+</center>
 <br/>
+<center>
 <h2>Some reviews...</h2>
+</center>
 <br/>
 <br/>
 <img width="257" src="https://user-images.githubusercontent.com/101112829/210307372-a03da8fb-71d7-43b5-b622-48b6175882ff.png"><br/>
@@ -49,7 +56,7 @@ Consider donating to our project.
 <br/>
 
 
-
+<center>
 © Azumi Development 2022-2023
 </center>
 </html>
