--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ Consider donating to our project.
 
 
 <center>
+<a href="https://azumi.is-an.app/devs/">Meet the developers!</a><br/>
 © Azumi Development 2022-2023
 </center>
 </html>
