--- a/devs.html
+++ b/devs.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Azumi Developers</title>
-<link href="https://raw.githubusercontent.com/Azumi-Development/Azumi-Development.github.io/main/apex.css" rel="stylesheet">
+<link href="apex.css" rel="stylesheet">
 </head>
 <a href="https://azumi.is-an.app/devs/aqua.html">AquaQuokka</a>
 <a href="https://azumi.is-an.app/devs/typed.html">TYP3D</a>
