--- a/devs.html
+++ b/devs.html
@@ -3,6 +3,8 @@
 <title>Azumi Developers</title>
 <link href="apex.css" rel="stylesheet">
 </head>
+<center>
 <a href="https://azumi.is-an.app/devs/aqua.html">AquaQuokka</a><br/>
 <a href="https://azumi.is-an.app/devs/typed.html">TYP3D</a>
+</center>
 </html>
