--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<link href="apex.css" rel="stylesheet">
+<link type="text/css" rel="stylesheet" href="apex.less">
+<script src="https://cdn.jsdelivr.net/npm/less" ></script>
 <title>Azumi Development</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
 </head>
