--- a/devs.html
+++ b/devs.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <title>Azumi Developers</title>
-<link href="apex.css" rel="stylesheet">
+<link type="text/css" rel="stylesheet" href="apex.less">
+<script src="https://cdn.jsdelivr.net/npm/less" ></script>
 </head>
 <center>
 <a href="https://azumi.is-an.app/devs/aqua.html">AquaQuokka</a><br/>
