--- a/devs.html
+++ b/devs.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Azumi Developers</title>
-<link type="text/css" rel="stylesheet" href="apex.less">
+<link type="text/css" rel="stylesheet/less" href="apex.less">
 <script src="https://cdn.jsdelivr.net/npm/less" ></script>
 </head>
 <center>
