--- a/devs.html
+++ b/devs.html
@@ -5,7 +5,7 @@
 <script src="https://cdn.jsdelivr.net/npm/less" ></script>
 </head>
 <center>
-<a href="https://azumi.is-an.app/devs/aqua.html">AquaQuokka</a><br/>
-<a href="https://azumi.is-an.app/devs/typed.html">TYP3D</a>
+<p><a target="_blank" href="https://azumi.is-an.app/devs/aqua.html">AquaQuokka</a><br/></p>
+<p><a target="_blank" href="https://azumi.is-an.app/devs/typed.html">TYP3D</a></p>
 </center>
 </html>
