--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 Before doing anything, read these:<br/>
 <br/>
 
-<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service">Terms of Service</a><br/>
-<a href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/privacy-policy">Privacy Policy</a><br/>
+<a target="_blank" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/terms-of-service">Terms of Service</a><br/>
+<a target="_blank" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/privacy-policy">Privacy Policy</a><br/>
 <br/>
 <h3>Thank you for reading.</h3>
-<button type="button" onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=1005312021836869795&permissions=1636248845399&scope=bot'">Add to Server</button>
+<button target="_blank" type="button" onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=1005312021836869795&permissions=1636248845399&scope=bot'">Add to Server</button>
 <br/>
 </center>
 <br/>
@@ -24,7 +24,7 @@ Before doing anything, read these:<br/>
 <h2>Why is the bot down?</h2>
 <br/>
 <br/>
-We use a hosting service called <a href="https://railway.app">Railway</a>
+We use a hosting service called <a target="_blank" href="https://railway.app">Railway</a>
 to host Azumi, and you can only run deploys for 500h/m, which means that there is a week where the bot will be down each month.
 Consider donating to our project.
 <br/>
