--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Before doing anything, read these:<br/>
 <a target="_blank" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/privacy-policy">Privacy Policy</a><br/>
 <br/>
 <h3>Thank you for reading.</h3>
-<button target="_blank" type="button" onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=1005312021836869795&permissions=1636248845399&scope=bot'">Add to Server</button>
+<button type="button" onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=1005312021836869795&permissions=1636248845399&scope=bot'">Add to Server</button>
 <br/>
 </center>
 <br/>
