--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Consider donating to our project.
 
 
 <center>
-<a href="https://azumi.is-an.app/devs">Meet the developers!</a><br/>
+<a target="_blank" href="https://azumi.is-an.app/devs">Meet the developers!</a><br/>
 © Azumi Development 2022-2023
 
 </center>
