--- a/devs/typed.html
+++ b/devs/typed.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL=https://typedonline.github.io"/>
+<meta http-equiv="refresh" content="0; URL=https://typed.is-a.dev"/>
