--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@ Consider donating to our project.
 
 <center>
 <a target="_blank" href="https://azumi.is-an.app/devs">Meet the developers!</a><br/>
-
-© Azumi Development 2022-2023<br/>
-
-<img src="https://github-readme-stats.vercel.app/api/pin/?username=Azumi-Development&repo=azumi-development.github.io"/><br/>
 </center>
+© Azumi Development 2022-2023<br/>
+<img src="https://github-readme-stats.vercel.app/api/pin/?username=Azumi-Development&repo=azumi-development.github.io"/>
 </html>
