--- a/index.html
+++ b/index.html
@@ -55,5 +55,5 @@ Consider donating to our project.
 <a target="_blank" href="https://azumi.is-an.app/devs">Meet the developers!</a><br/>
 </center>
 © Azumi Development 2022-2023<br/>
-<img src="https://github-readme-stats.vercel.app/api/pin/?username=Azumi-Development&repo=azumi-development.github.io"/>
+<img src="https://github-readme-stat
 </html>
