--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-<link type="text/css" rel="stylesheet/less" href="apex.less">
-<script src="https://cdn.jsdelivr.net/npm/less" ></script>
+<link type="text/css" rel="stylesheet" href="apex.css">
 <title>Azumi Development</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Azumi-Development/Azumi/main/azumi.png">
 </head>
