--- a/devs.html
+++ b/devs.html
@@ -1,8 +1,7 @@
 <html>
 <head>
 <title>Azumi Developers</title>
-<link type="text/css" rel="stylesheet/less" href="apex.less">
-<script src="https://cdn.jsdelivr.net/npm/less" ></script>
+<link type="text/css" rel="stylesheet" href="apex.css">
 </head>
 <center>
 <p><a target="_blank" href="https://azumi.is-an.app/devs/aqua.html">AquaQuokka</a><br/></p>
