--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@ Before doing anything, read these:<br/>
 <button type="button" onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=1005312021836869795&permissions=1636248845399&scope=bot'">Add to Server</button>
 <br/>
 </center>
+<center>
+<h2>What is Azumi?</h2><br/>
+Azumi is a Discord bot shaped and made by the community. It is written in Python, with the help of <a href="https://bobdotcom.xyz/">BobDotCom's</a> amazing version two of his Discord API wrapper, <a href="https://pycord.dev/">Pycord</a>.<br/>
+Azumi is focused on being a widely available and easy-to-use and customize, utility bot. It has several features to help with your day-to-day Discord use, such as:<br/><br/><br/>
+
+&#x2022;Timestamp Generation<br/>
+&#x2022;Moderation Commands<br/>
+&#x2022;Weather Information<br/>
+&#x2022;Member Data<br/>
+&#x2022;GitHub Information<br/>
+&#x2022;Message Grabbing<br/>
+&#x2022;Math Calculation<br/>
+&#x2022;Dice Rolling<br/>
+&#x2022;Pronoun Role Managament (Beta)<br/>
+&#x2022;Server Logs (Coming Soon!)<br/><br/><br/>
+
+
+There's also a lot planned for the future... ;)<br/>
+</center>
 <br/>
 <br/>
 <h2>Why is the bot down?</h2>
