--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
 <center>
+<h2>Read the blog!</h2><br/>
+<a href="https://azumi.hashnode.dev">Click Here</a><br/><br/>
 <h2>Notice</h2>
 
 Before doing anything, read these:<br/>
@@ -23,19 +25,19 @@ Before doing anything, read these:<br/>
 Azumi is a Discord bot shaped and made by the community. It is written in Python, with the help of <a href="https://bobdotcom.xyz/">BobDotCom's</a> amazing version two of his Discord API wrapper, <a href="https://pycord.dev/">Pycord</a>.<br/>
 Azumi is focused on being a widely available and easy-to-use and customize, utility bot. It has several features to help with your day-to-day Discord use, such as:<br/><br/><br/>
 
-&#x2022;Timestamp Generation<br/>
-&#x2022;Moderation Commands<br/>
-&#x2022;Weather Information<br/>
-&#x2022;Member Data<br/>
-&#x2022;GitHub Information<br/>
-&#x2022;Message Grabbing<br/>
-&#x2022;Math Calculation<br/>
-&#x2022;Dice Rolling<br/>
-&#x2022;Pronoun Role Managament (Beta)<br/>
-&#x2022;Server Logs (Coming Soon!)<br/><br/><br/>
+&#x2022; Timestamp Generation<br/>
+&#x2022; Moderation Commands<br/>
+&#x2022; Weather Information<br/>
+&#x2022; Member Data<br/>
+&#x2022; GitHub Information<br/>
+&#x2022; Message Grabbing<br/>
+&#x2022; Math Calculation<br/>
+&#x2022; Dice Rolling<br/>
+&#x2022; Pronoun Role Managament (Beta)<br/>
+&#x2022; Server Logs (Coming Soon!)<br/><br/><br/>
 
 
-There's also a lot planned for the future... ;)<br/>
+There's also a lot planned for the future... 😉<br/>
 </center>
 <br/>
 <br/>
