--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Before doing anything, read these:<br/>
 </center>
 <center>
 <h2>What is Azumi?</h2><br/>
-Azumi is a Discord bot shaped and made by the community. It is written in <a href="https://python.org">Python v3</a>, with the help of <a href="https://bobdotcom.xyz/">BobDotCom's</a> amazing version two of his Discord API wrapper, <a href="https://pycord.dev/">Pycord</a>.<br/>
+Azumi is a Discord bot shaped and made by the community. It is written in <a target="_blank" href="https://python.org">Python v3</a>, with the help of <a target="_blank" href="https://bobdotcom.xyz/">BobDotCom's</a> amazing version two of his Discord API wrapper, <a target="_blank" href="https://pycord.dev/">Pycord</a>.<br/>
 Azumi is focused on being a widely available and easy-to-use and customize, utility bot. It has several features to help with your day-to-day Discord use, such as:<br/><br/><br/>
 
 &#x2022; Timestamp Generation<br/>
