--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <center>
 <h2>Read the blog!</h2><br/>
 <a target="_blank" href="https://azumi.hashnode.dev">Click Here</a><br/><br/>
+<h2>Read the docs!</h2><br/>
+<a target="_blank" href="https://azumi.is-an.app/docs">Click Here</a><br/><br/>
 <h2>Notice</h2>
 
 Before doing anything, read these:<br/>
