--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@ Consider donating to our project.
 <br/>
 <br/>
 
-
 <center>
-<a target="_blank" href="https://azumi.is-an.app/devs">Meet the developers!</a><br/>
+<a target="_blank" href="https://azumi.is-an.app/devś">Meet the developers!</a><br/>
 </center>
 © Azumi Development 2022-2023<br/>
 <img src="https://github-readme-stat
