--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <center><img src="https://i.imgur.com/He22p4b.png" border="0" width="40" height="40"> <strong>Azumi Development</strong></center>
 <center>
 <h2>Read the blog!</h2><br/>
-<a target="_blank" href="https://azumi.hashnode.dev">Click Here</a><br/><br/>
+<a target="_blank" href="https://blog.azumi.is-an.app">Click Here</a><br/><br/>
 <h2>Read the docs!</h2><br/>
-<a target="_blank" href="https://azumi.is-an.app/docs">Click Here</a><br/><br/>
+<a target="_blank" href="https://docs.azumi.is-an.app">Click Here</a><br/><br/>
 <h2>Notice</h2>
 
 Before doing anything, read these:<br/>
