--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Azumi</title>
-        <link data-trunk href="./tailwind.css" rel="css" />
-        <link data-trunk rel="copy-dir" href="static">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto+Mono&display=swap" rel="stylesheet">
-    </head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Azumi</title>
+  </head>
+  <body>
+    <div id="thunder"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
